--- a/MagicalExoPlayer/app/src/main/res/layout/activity_player.xml
+++ b/MagicalExoPlayer/app/src/main/res/layout/activity_player.xml
@@ -5,12 +5,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:background="#000000"
-        tools:context=".MainActivity">
+        tools:context=".PlayerActivity">
 
     <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/video_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:use_controller="true"
             app:show_timeout="10000"
             app:fastforward_increment="30000"
