--- a/MagicalExoPlayer/app/src/main/res/layout/activity_player.xml
+++ b/MagicalExoPlayer/app/src/main/res/layout/activity_player.xml
@@ -5,15 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:background="#000000"
-        tools:context=".PlayerActivity">
+        tools:context=".PlayerActivity"
+        android:id="@+id/container">
 
-    <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/video_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:use_controller="true"
-            app:show_timeout="10000"
-            app:fastforward_increment="30000"
-            app:rewind_increment="30000"/>
 
 </FrameLayout>
