--- a/MagicalExoPlayer/app/src/main/res/layout/fragment_player_item.xml
+++ b/MagicalExoPlayer/app/src/main/res/layout/fragment_player_item.xml
@@ -13,7 +13,7 @@
             android:id="@+id/video_view"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            app:use_controller="true"
+            app:use_controller="false"
             app:show_timeout="5000"
             app:fastforward_increment="30000"
             app:rewind_increment="30000"
